--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
     <ul class="nav navbar-nav">
       <li class=""><a href="#profile"> Profile</a></li>
-      <li class="active"><a href="#experience"> Experiences</a></li>
+      <li><a class="active" href="#experience"> Experiences</a></li>
       <li class=""><a href="#abilities"> Abilities</a></li>
       <li class=""><a href="#project"> Projects</a></li>
       <li class=""><a href="#contact"> Contact</a></li>
